--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="encabezado">
+    <div id="logos">
+     <a href="https://www.popoloca-tlacoyalco.com/es" target="_blank">
+      <img src="Imagenes/logos.png" alt="Logo 1">
+    </a> 
+      <a href="https://untimexico.org/" target="_blank">
 
+        <img src="Imagenes/Unti.png" alt="Logo 2">
+      </a>
+      <a href="https://ilvmx.com/" target="_blank">
+
+        <img src="Imagenes/Foto2.png" alt="Logo 3">
+      </a>
+      <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwiH-bLOy4uNAxX-XX8AHTByDw4YABAAGgJvYQ&co=1&gclid=Cj0KCQjwoNzABhDbARIsALfY8VOVje3nYnL388bIRWwbCqfuLq0aeZME5iLlnk6hg3Jm8jXzBJDGekkaAk0yEALw_wcB&ohost=www.google.com&cid=CAESVuD261uqqNNrZfMSyz40Tz2-49g8LGUYzIzIeKSP15xjjS8XUdO6EOKGMs-UtwPj-1jemAGXdm3oNtfkGNiCPIYHtm_hNO3wsBmhlK0dWWpIxzY4MFse&sig=AOD64_0rVfEOpRpCymHOBFHvW7FNhoKXUA&q&adurl&ved=2ahUKEwi4rq_Oy4uNAxWfG9AFHS_HA9YQ0Qx6BAgLEAE" target="_blank">
+
+        <img src="Imagenes/Ibero.png" alt="Logo 4">
+      </a>
+      <a href="https://www.uiep.edu.mx/" target="_blank">
+
+        <img src="Imagenes/Foto.png" alt="Logo 4">
+      </a>
+    </div>
+  </div>
+  
   <div id="contenedor">
     <div id="traductor">
       <center>
